test/modules/vass/multiply-defined-error-with-fn.good
multiply-defined-error-with-fn.chpl:17: error: symbol Barrier is multiply defined
multiply-defined-error-with-fn.chpl:23: note: also defined here
multiply-defined-error-with-fn.chpl:13: note: also defined as a function here (and possibly elsewhere)
